--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -5,5 +5,5 @@ templateClass: tmpl-post
 <p><a href="{{ '/' | url }}">Back home</a></p>
 <hr />
 <h1>{{ title }}</h1>
-<span>{{ date }}</span> ok
+<span>{{ date }}</span>
 {{ content | safe }}
